--- a/plugin.xml
+++ b/plugin.xml
@@ -60,7 +60,7 @@ xmlns:android="http://schemas.android.com/apk/res/android"
         </config-file>
                
         <config-file target="./res/values/strings.xml" parent="/resources">
-            <string name="notification_bg_color">$NOTIFICATION_BG_COLOR</string>
+            <color name="notification_bg_color">$NOTIFICATION_BG_COLOR</color>
         </config-file>
 
         <config-file target="AndroidManifest.xml" parent="/manifest/application">
