--- a/plugin.xml
+++ b/plugin.xml
@@ -14,7 +14,6 @@ xmlns:android="http://schemas.android.com/apk/res/android"
         <merges target="cordova.plugins.firebase.messaging" />
     </js-module>
 
-    <preference name="NOTIFICATION_BG_COLOR" />
     <engines>
         <engine name="cordova" version=">=6.0.0"/>
         <engine name="cordova-android" version=">=6.0.0"/>
@@ -51,6 +50,7 @@ xmlns:android="http://schemas.android.com/apk/res/android"
 
     <platform name="android">
         <preference name="FIREBASE_VERSION" default="11.6.+"/>
+        <preference name="NOTIFICATION_BG_COLOR" default="#ffffff"/>
 
         <config-file target="res/xml/config.xml" parent="/*">
             <feature name="FirebaseMessaging">
